kubernetes-deployment/kafka-and-microservices/kafka-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
        network/kafka-network: "true"
    spec:
      containers:
        - env:
            - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
              value: PLAINTEXT://kafka:29092
            - name: KAFKA_CLUSTERS_0_NAME
              value: local
            - name: KAFKA_CLUSTERS_0_ZOOKEEPER
              value: zookeeper:2181
          image: provectuslabs/kafka-ui:latest
          imagePullPolicy: IfNotPresent
          name: kafka-ui
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
