kubernetes-deployment/kafka-and-microservices/device-data-event-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-data-event-consumer
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    app: device-data-event-consumer
