kubernetes-deployment/kafka-and-microservices/device-data-event-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-data-event-processor
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
  selector:
    app: device-data-event-processor
