kubernetes-deployment/kafka-and-microservices/device-data-event-producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-data-event-producer
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: device-data-event-producer
