kubernetes-deployment/kafka-and-microservices/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8080
  selector:
    app: kafka-ui
