kubernetes-deployment/kafka-and-microservices/notification-sender-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-sender
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9004
      targetPort: 9004
  selector:
    app: notification-sender
