kubernetes-deployment/kafka-and-microservices/points-allocator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: points-allocator
spec:
  ports:
    - protocol: TCP
      port: 9003
      targetPort: 9003
  selector:
    app: points-allocator
